force-app/main/default/objects/Project__c/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Skills__c</field>
            <operation>equals</operation>
            <valueField>Assignment__c.Skill_Required__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Assignment__c</referenceTo>
    <relationshipLabel>Project (Assignment)</relationshipLabel>
    <relationshipName>Project1</relationshipName>
    <type>Lookup</type>
</CustomField>