force-app/main/default/objects/Project__c/fields/Project_Duration__c.field-meta.xml
<CustomField>
    <fullName>Project_Duration__c</fullName>
    <label>Project Duration</label>
    <referenceTo>Assignment__c</referenceTo>
    <relationshipLabel>Project</relationshipLabel>
    <relationshipName>Project</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>